bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: value readMassage
  if (readMassage()=="R"){
      ^